--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -3,14 +3,18 @@
     <table class="table table-striped">
         <thead>
             <td>Producto</td>
+            <td>Descripción</td>
             <td>Precio</td>
+            <td>Código</td>
             <td>Stock</td>
             <td>Categoria</td>
         </thead>
         {{#each productos}}
         <tr>
             <td>{{this.title}}</td>
+            <td>{{this.description}}</td>
             <td>{{this.price}}</td>
+            <td>{{this.code}}</td>
             <td>{{this.stock}}</td>
             <td>{{this.category}}</td>
         </tr>
