Desafío Websockets-Handlebars final

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,13 +1,13 @@
 <div class="container">
-    Esta es la lista de productos
+    <h1>ESTA ES LA LISTA DE PRODUCTOS</h1>
     <table class="table table-striped">
         <thead>
-            <td>Producto</td>
-            <td>Descripción</td>
-            <td>Precio</td>
-            <td>Código</td>
-            <td>Stock</td>
-            <td>Categoria</td>
+            <td><strong>Producto</strong></td>
+            <td><strong>Descripción</strong></td>
+            <td><strong>Precio</strong></td>
+            <td><strong>Código</strong></td>
+            <td><strong>Stock</strong></td>
+            <td><strong>Categoria</strong></td>
         </thead>
         {{#each productos}}
         <tr>
