practica-integradora clase 15

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -9,7 +9,7 @@
             <td><strong>Stock</strong></td>
             <td><strong>Categoria</strong></td>
         </thead>
-        {{#each productos}}
+        {{#each products}}
         <tr>
             <td>{{this.title}}</td>
             <td>{{this.description}}</td>
